--- a/index.html
+++ b/index.html
@@ -35,6 +35,24 @@
             <img src="images/nahid 1.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="fst-half">
+            <img src="images/nahid 23.png" alt="">
+
+        </div>
+        <div class="fst-half">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. <br>
+                I can build any simple website. <br>
+                I can even teach my grandma how to make simple website. <br>
+                My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="nd-button" target="_blank" href="">DOWNLOAD RESUME</a>
+
+
+        </div>
+
+    </section>
 
 </body>
 
