--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner fexi">
         <div class="fst-half">
             <h1>Welcome To</h1>
             <h1> <span class="color-orng"> Nahid Hasan</span> portfolio!</h1>
             <h3>Build Climber and Train Stopper</h3>
             <p>You might saw me jumping, climbing buildings, and stopping trains.<br> But nobody pays me a dime for that
                 work.
-                That's why I am learning and mastering web development. <br> I will not stop until I become the Web
+                That's why I am learning <br> and mastering web development. I will not stop until I become the <br> Web
                 Development
                 Hero.</p>
             <a class="button" target="_blank" href="https://www.facebook.com/nahidhassan088">HIRE ME</a>
@@ -35,7 +35,7 @@
             <img src="images/nahid 1.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big fexi">
         <div class="fst-half">
             <img src="images/nahid 23.png" alt="">
 
@@ -53,6 +53,35 @@
         </div>
 
     </section>
+    <section class="exper">
+
+        <h1>Experiences</h1>
+
+        <div class="fexi">
+            <div id="red-color" class="ex-item">
+                <h1>Full Stack Web Developer</h1>
+                <h2 class="komola-color">2021-Present | Pro Level Developer</h2>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient.
+                    I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS.
+                    I even know the deployment, server and security. I will give you 100% web solution.</p>
+
+            </div>
+            <div id="blue-color" class="ex-item">
+                <h1>Baby Web Developer</h1>
+                <h3 class="komola-color">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. <br>
+                    I made their website and showed it to them.
+                    They liked it. And uploaded <br> the content.
+                    It was fun working at Programming Hero</p>
+
+
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>© Peter Parker 2022, a Programming Hero initiative.</p>
+    </footer>
 
 </body>
 
